<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuRefresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_white"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menuEmail"
        android:orderInCategory="200"
        android:title="@string/email"
        android:icon="@drawable/ic_email_white"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuFind"
        android:title="@string/find"
        android:orderInCategory="300"
        android:icon="@drawable/ic_find_white"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuDelete"
        android:orderInCategory="400"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuScrollTop"
        android:title="@string/scroll_top"
        android:orderInCategory="500"/>

    <item
        android:id="@+id/menuScrollBottom"
        android:title="@string/scroll_bottom"
        android:orderInCategory="600"/>

</menu>