<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuEmail"
        android:orderInCategory="100"
        android:title="@string/email"
        android:icon="@drawable/ic_email_white"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuClear"
        android:orderInCategory="200"
        android:title="@string/clear"
        android:icon="@drawable/ic_clear_white"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuScrollTop"
        android:title="@string/scroll_top"
        android:orderInCategory="300"/>

    <item
        android:id="@+id/menuScrollBottom"
        android:title="@string/scroll_bottom"
        android:orderInCategory="400"/>

</menu>