<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context="com.jjkeller.kmb.developertools.dialog.DiagnosticsDialog"
              android:minWidth="350dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp">

        <TextView
            style="?android:attr/windowTitleStyle"
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?android:attr/textColorTertiary"
            android:textAllCaps="true"
            android:padding="20dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <CheckBox
            android:id="@+id/checkDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/kmb_database"/>

        <CheckBox
            android:id="@+id/checkErrorLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/kmb_error_log"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonNegative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/background"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorPrimary" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/divider"/>

        <Button
            android:id="@+id/buttonPositive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorPrimary"
            android:background="?android:attr/background"/>

        <LinearLayout
            android:id="@+id/progressBarContainer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerHorizontal="true"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>