<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jjkeller.kmb.developertools.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="32dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </Space>

                <LinearLayout
                    android:id="@+id/buttonExecuteSql"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:src="@mipmap/ic_launcher_play_white"
                        android:tint="?attr/colorAccent">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:text="@string/title_activity_sqlquery"
                        android:textAlignment="center"
                        android:tint="?android:attr/textColorPrimary">
                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </Space>

                <LinearLayout
                    android:id="@+id/buttonDatabaseManagement"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:src="@mipmap/ic_launcher_backup_white"
                        android:tint="?attr/colorAccent">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:text="@string/backup_restore_database"
                        android:textAlignment="center"
                        android:tint="?android:attr/textColorPrimary">
                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </Space>

                <LinearLayout
                    android:id="@+id/buttonBluetooth"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:src="@mipmap/ic_launcher_bluetooth_white"
                        android:tint="?attr/colorAccent">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:text="@string/bluetooth_terminal"
                        android:textAlignment="center"
                        android:tint="?android:attr/textColorPrimary">
                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
                </Space>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="32dp"
                android:paddingBottom="16dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </Space>

                <LinearLayout
                    android:id="@+id/buttonViewErrorLog"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:src="@mipmap/ic_launcher_log_white"
                        android:tint="?attr/colorAccent">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:text="@string/kmb_error_log"
                        android:textAlignment="center"
                        android:tint="?android:attr/textColorPrimary">
                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </Space>

                <LinearLayout
                    android:id="@+id/buttonEmailDiagnostics"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:src="@mipmap/ic_launcher_email_white"
                        android:tint="?attr/colorAccent">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:text="@string/email_diagnostics"
                        android:textAlignment="center"
                        android:tint="?android:attr/textColorPrimary">
                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </Space>

                <LinearLayout
                    android:id="@+id/buttonDeleteDiagnostics"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:src="@mipmap/ic_launcher_delete_white"
                        android:tint="?attr/colorAccent">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:text="@string/delete_diagnostics"
                        android:textAlignment="center"
                        android:tint="?android:attr/textColorPrimary">
                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
                </Space>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/divider">
    </LinearLayout>

    <TextView
        android:id="@+id/txtStatusDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="?android:attr/divider"/>

</LinearLayout>